--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
 }
 
 dependencies {
+    implementation project(':lib')
     implementation deps.kotlin.kotlin_jre
     implementation deps.android.appcompat
     implementation deps.android.constraint_layout
